--- a/src/components/directory/directory-style.css
+++ b/src/components/directory/directory-style.css
@@ -1,6 +1,9 @@
 .directory-menu {
-	width: 100%;
+	width: 80%;
+	height: 100vh;
+	align-items: center;
 	display: flex;
+	justify-content: space-evenly;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	margin: 0 auto;
 }
