--- a/src/components/directory/directory-style.css
+++ b/src/components/directory/directory-style.css
@@ -3,7 +3,7 @@
 	height: 100vh;
 	align-items: center;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	flex-wrap: wrap;
 	margin: 0 auto;
 }
